# Hackathon-Agent

./: .gitignore  README.md  check_models.py  check_ollama.py  context.md  main.py  pyproject.toml  test.py
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json
frontend/src/: App.tsx
frontend/src/components/ui/: ai-prompt-box.tsx  v0-ai-chat.tsx
src/: api.py
src/agent/: agent.py
src/ingestion/: embedder.py  hf_loader.py  pdf_loader.py
src/retrieval/: retriever.py
